k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autoscore
  labels:
    app.kubernetes.io/name: autoscore
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: autoscore
  ports:
    - name: http
      port: 8000
      targetPort: http
